--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/fav/logo_kiks.png" type="image/png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <!-- crossorigin используется для того, чтобы не было проблем с CORS. Ну а Cross-origin resource sharing (CORS; с англ. — «совместное использование ресурсов между разными источниками») — технология современных браузеров, которая позволяет предоставить веб-странице доступ к ресурсам другого домена. -->
@@ -96,7 +96,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Air Jordan 4 'Bred'</h5>
                                             <p class="card-text">Камбек, который мы так долго ждали.</p>
-                                            <a href="pages/index_article1.html" class="btn btn-primary">Перейти к статье</a>
+                                            <a href="index_article1.html" class="btn btn-primary">Перейти к статье</a>
                                         </div>
                                     </div>
                                 </div>
@@ -126,7 +126,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Топ кроссовок на весну</h5>
                                             <p class="card-text">Что лучше надеть этой весной расскажем в этой статье!</p>
-                                            <a href="pages/index_article2.html" class="btn btn-primary">Перейти к статье</a>
+                                            <a href="index_article2.html" class="btn btn-primary">Перейти к статье</a>
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Vans Style 73 DX 'Anaheim Factory Pack'</h5>
                                             <p class="card-text">Крутая модель из архива.</p>
-                                            <a href="pages/index_article3.html" class="btn btn-primary">Перейти к статье</a>
+                                            <a href="index_article3.html" class="btn btn-primary">Перейти к статье</a>
                                         </div>
                                     </div>
                                 </div>
@@ -202,7 +202,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Air Jordan 4 'Bred'</h5>
                                                 <p class="card-text">Камбек, который мы так долго ждали.</p>
-                                                <a href="pages/index_article1.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article1.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
@@ -232,7 +232,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Топ кроссовок на весну</h5>
                                                 <p class="card-text">Что лучше надеть этой весной расскажем в этой статье!</p>
-                                                <a href="pages/index_article2.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article2.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
@@ -262,7 +262,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Vans Style 73 DX 'Anaheim Factory Pack'</h5>
                                                 <p class="card-text">Крутая модель из архива.</p>
-                                                <a href="pages/index_article3.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article3.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
@@ -309,7 +309,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Air Jordan 4 'Bred'</h5>
                                                 <p class="card-text">Камбек, который мы так долго ждали.</p>
-                                                <a href="pages/index_article1.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article1.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
@@ -339,7 +339,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Топ кроссовок на весну</h5>
                                                 <p class="card-text">Что лучше надеть этой весной расскажем в этой статье!</p>
-                                                <a href="pages/index_article2.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article2.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
@@ -369,7 +369,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Vans Style 73 DX 'Anaheim Factory Pack'</h5>
                                                 <p class="card-text">Крутая модель из архива.</p>
-                                                <a href="pages/index_article3.html" class="btn btn-primary">Перейти к статье</a>
+                                                <a href="index_article3.html" class="btn btn-primary">Перейти к статье</a>
                                             </div>
                                         </div>
                                     </div>
