--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
         </div>
         <div class="cont_center">
-        <div class="btn_row">
-            <h2 class="tmr">Разделы статей</h2><img class="img_h" src="https://img.icons8.com/doodle/48/000000/books.png">
-        </div>
+            <div class="btn_row">
+                <h2 class="tmr">Разделы статей</h2><img class="img_h" src="https://img.icons8.com/doodle/48/000000/books.png">
+            </div>
         </div>
         <div class="accordion" id="accordionExample">
             <div class="card">
@@ -113,7 +113,7 @@
                                                 <div class="carousel-item">
                                                     <img src="img/top/top_vesna_Air_Max_98.png" class="d-block w-100 h-177" alt="...">
                                                 </div>
-                                                 <div class="carousel-item">
+                                                <div class="carousel-item">
                                                     <img src="img/top/top_vesna_Puma_cell.png" class="d-block w-100 h-177" alt="...">
                                                 </div>
                                             </div>
@@ -387,7 +387,7 @@
     </main>
 
     <footer class="container column" id="foo">
-        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png"></a>
+        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png" class="rot"></a>
         <p>&copy; Lygarev M. 2019</p>
     </footer>
     <!--    Тут подключаем всё что необходимо по части js-скриптов и в общем-то забываем об этих трёх файлах. Если нам будут нужно подключить свой файл со скриптами, то помещать его будет нужно НИЖЕ этих трёх. -->
