--- a/index_article2.html
+++ b/index_article2.html
@@ -96,7 +96,7 @@
 
     <footer class="container_my">
         <p class="foo">Изображения и текст статьи взяты с <a href="https://sneakerhead.ru/blog/krossovki-na-syruyu-vesnu/" class="ssylka2">Sneaker Head&trade;</a></p>
-        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png"></a>
+        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png" class="rot"></a>
         <p id="foo" class="foo">18.05.2019</p>
     </footer>
 
