--- a/index_article3.html
+++ b/index_article3.html
@@ -87,7 +87,7 @@
 
     <footer class="container_my" id="foo">
         <p class="foo">Изображения и текст статьи взяты с <a href="https://sneakerhead.ru/blog/air-jordan-4-bred/" class="ssylka2">Sneaker Head&trade;</a>, <a href="https://www.footshop.eu/en/" class="ssylka2">Footshop&trade;</a></p>
-        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png"></a>
+        <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png" class="rot"></a>
         <p class="foo">18.05.2019</p>
     </footer>
 
