--- a/index.html
+++ b/index.html
@@ -386,7 +386,21 @@
 
     </main>
 
-    <footer class="container column" id="foo">
+    <footer class="container column" id="foo"><!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(53801248, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/53801248" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
         <a href="https://vk.com/mlygarev"><img src="https://img.icons8.com/doodle/48/000000/handshake.png" class="rot"></a>
         <p>&copy; Lygarev M. 2019</p>
     </footer>
